app is now working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">MControl Test App</string>
+    <string name="app_name">MControl Test</string>
+    <string name="notification_title">MCU Control Monitor</string>
+    <string name="notification_subtext">Logging...</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
